Bug 621430. Lazily create stream writer thread so we don't create one when using local audio. Also, shut down the stream writer thread when the audio stream dies. r=dougt,a=blocker