content/media/nsAudioStream.h
@@ -54,6 +54,8 @@ public:
     FORMAT_FLOAT32
   };
 
+  virtual ~nsAudioStream();
+
   // Initialize Audio Library. Some Audio backends require initializing the
   // library before using it. 
   static void InitLibrary();
@@ -64,7 +66,7 @@ public:
 
   // Thread, usually for MOZ_IPC handling, that is shared between audio streams.
   // This may return null in the child process
-  virtual nsIThread *GetThread();
+  nsIThread *GetThread();
 
   // AllocateStream will return either a local stream or a remoted stream
   // depending on where you call it from.  If MOZ_IPC is enabled, and you
